--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
 
 
     <img src="https://cdna.artstation.com/p/assets/images/images/062/335/060/medium/david-nathan-thesmilingogre-color-pencil-line-drawing-of-a-ferocious-dragon-8adafc91-7415-4e71-90x-a0b4bec5d778.jpg?1682898705" alt="Colorful AI Art">
-    <img src="https://cdna.artstation.com/p/assets/images/images/062/076/084/medium/alexandru-vitali-patrascan-teutonic-knight-03-01-art.jpg?1682317871" alt="Fantasy AI">
-    <img src="https://cdnb.artstation.com/p/assets/images/images/090/043/671/medium/mert-genccinar-raven-i.jpg?1752715648" alt="Neon AI Sculpture">
-    <img src="https://cdna.artstation.com/p/assets/images/images/058/230/218/medium/christer-w-img-0833.jpg?1673674045" alt="Portrait AI">
-    <img src="https://cdna.artstation.com/p/assets/images/images/060/159/408/medium/emuairt-emukiller-astrolabe-by-subterfugitive-eebe9faf-090f-4865-9a1f-7e758300e775-gigapixel-standard-scale-2-00x.jpg?1677949743" alt="Surreal AI Art">
-    <img src="https://cdnb.artstation.com/p/assets/images/images/030/960/883/medium/jakob-vandenabeele-cyberpunk2077-contest-01.jpg?1602166723" alt="Cyberpunk AI">
-    <img src="https://portraitart.app/static/gallery/girl1_oilpainting_1024.webp" alt="Oil‑style AI">
-    <img src="https://cdna.artstation.com/p/assets/images/images/083/905/828/medium/sumit-kumar-sumit-kr-httpss-mj-run7b2gscjy6wg-gopro-footage-of-purple-skis-f4a748d6-654b-4260-90b8-824b1aa028ea.jpg?1737054227" alt="Minimal AI">
-    <img src="https://cdnb.artstation.com/p/assets/images/images/000/944/253/medium/jarold-sng-cc-minutemen-01-flattened-2.jpg?1443927538" alt="AI Drawing">
-    <img src="https://cdnb.artstation.com/p/assets/images/images/067/522/371/medium/amelie-anime-portfolio1.jpg?1695583131 alt="Anime AI">
+   
+    <img src="https://portraitart.app/static/gallery/cat3_oilpainting_1024.webp" alt="Neon AI Sculpture">
+    <img src="https://portraitart.app/static/gallery/bird1_oilpainting_1024.webp" alt="Portrait AI">
+    
+  
+ 
+
+    <img src="https://portraitart.app/static/gallery/oldphoto5_oilpainting_1024.webp" AI">
   </div>
 </section>
 
